--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
 anyio==3.6.2
+async-generator==1.10
 async-timeout==4.0.2
 asyncio==3.4.3
 attrs==22.2.0
 beautifulsoup4==4.12.2
 bidict==0.22.1
 bleach==6.0.0
+Brotli==1.0.9
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 decorator==4.4.2
+docopt==0.6.2
 docutils==0.19
+exceptiongroup==1.1.1
+fake-useragent==1.1.3
+Faker==18.5.1
 ffmpeg==1.4
 frozenlist==1.3.3
 h11==0.14.0
@@ -35,23 +42,32 @@ mega-pip==1.0
 mega.py==1.0.8
 more-itertools==9.1.0
 moviepy==1.0.3
+msedge-selenium-tools==3.141.4
 multidict==6.0.4
+mutagen==1.46.0
 numpy==1.24.2
+outcome==1.2.0
 pathlib==1.0.1
 Pillow==9.5.0
+pipreqs==0.4.13
 pkginfo==1.9.6
 proglog==0.1.10
 pyasn1==0.4.8
 pycountry==22.3.5
+pycparser==2.21
 pycryptodome==3.17
+pycryptodomex==3.17
 pydirectory==0.1.15
+pydub==0.25.1
 Pygments==2.15.0
 PyGPT==1.0.5
 PySocks==1.7.1
+pyTelegramBotAPI==4.11.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-engineio==4.4.0
 python-socketio==5.8.0
-pytube==12.1.2
+pytube @ git+https://github.com/nficano/pytube@da3141f3d937459cd7cfd9180970b9ec1d14bb5e
 pytubeX==0.1.4
 pywin32-ctypes==0.2.0
 readme-renderer==37.3
@@ -59,19 +75,27 @@ requests==2.28.2
 requests-toolbelt==0.10.1
 rfc3986==2.0.0
 rich==13.3.4
+selenium==3.141.0
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.4
 streamlink==5.3.1
 tenacity==5.1.5
 tqdm==4.65.0
+trio==0.22.0
+trio-websocket==0.10.2
 twine==4.0.2
 twitch-dl==2.1.1
 typing_extensions==4.5.0
 urllib3==1.26.15
 webencodings==0.5.1
 websocket-client==1.5.1
+websockets==11.0.2
 windows-curses==2.3.1
+wsproto==1.2.0
+yarg==0.1.9
 yarl==1.8.2
 youtube-dl==2021.12.17
+yt-dlp==2023.3.4
 zipp==3.15.0
